src/objects/Chapter_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Event__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_School__c</fullName>
        <description>The high school chapter that organized the activity.</description>
        <inlineHelpText>The high school JSA chapter that organized the activity.</inlineHelpText>
        <label>High School</label>
        <referenceTo>High_School__c</referenceTo>
        <relationshipLabel>Chapter Activities</relationshipLabel>
        <relationshipName>Chapter_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Length_of_Activity_Hours__c</fullName>
        <inlineHelpText>Duration of the activity, in hours.</inlineHelpText>
        <label>Length of Activity (Hours)</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Students_Served__c</fullName>
        <inlineHelpText>Number of students who participated in the activity.</inlineHelpText>
        <label>Number of Students Served</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Student leader who organized the event</inlineHelpText>
        <label>Student Leader</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Chapter Activities</relationshipLabel>
        <relationshipName>Chapter_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teacher_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teacher/Advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Chapter Activities (Teacher/Advisor)</relationshipLabel>
        <relationshipName>Chapter_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Guest Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chapter Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debate Watch Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voter Registration Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School-wide Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>High_School__r.Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>Chapter Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Chapter Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chapter Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>